--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: sixam_mart_store
 description: An application for multivendor ecommerce restaurant.
 publish_to: 'none'
-version: 1.75.77+79
+version: 3.77.78+100
 
 environment:
   sdk: '>=3.2.0 <4.0.0'
@@ -15,48 +15,50 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.6
   shared_preferences: ^2.0.6
-  connectivity_plus: ^5.0.2
-  firebase_core: ^2.4.1
-  firebase_messaging: ^14.2.1
-  flutter_local_notifications: ^17.2.1+2
+  connectivity_plus: ^6.1.1
+  firebase_core: ^3.9.0
+  firebase_messaging: ^15.1.6
+  flutter_local_notifications: ^18.0.1
   path_provider: ^2.0.2
-  url_strategy: ^0.2.0
+  url_strategy: ^0.3.0
+  url_launcher_ios: ^6.3.2
   shimmer_animation: ^2.0.0
   image_picker: ^1.0.7
   http: ^1.2.1
   pin_code_fields: ^8.0.1
   url_launcher: ^6.1.2
-  vibration: ^1.7.6
-  audioplayers: ^5.2.1
+  vibration: ^2.0.1
+  audioplayers: ^6.1.0
   flutter_switch: ^0.3.2
   flutter_typeahead: ^4.3.7
   phone_numbers_parser: ^8.1.0
   country_code_picker: ^3.0.0
   flutter_html: ^3.0.0-alpha.6
 #  bluetooth_thermal_printer: ^0.0.6
-  photo_view: ^0.14.0
+  photo_view: ^0.15.0
   image_compression_flutter: ^1.0.4
   win32: ^5.2.0
   google_maps_flutter: ^2.1.1
-  geolocator: ^10.1.0
+  geolocator: ^13.0.2
   cached_network_image: ^3.3.0
-  print_bluetooth_thermal: ^1.1.0
+#  print_bluetooth_thermal: ^1.1.0
   flutter_esc_pos_utils: ^1.0.1
 #  esc_pos_utils: ^1.1.0
-  screenshot: ^2.5.0
+  screenshot: ^3.0.0
   http_parser: ^4.0.2
   path: ^1.8.1
   intl: ^0.19.0
+  flutter_inappwebview_ios: ^1.1.2
   image: ^4.2.0
   dotted_border: ^2.0.0+1
-  carousel_slider_plus: ^6.0.0
+  carousel_slider_plus: ^7.1.0
   just_the_tooltip: ^0.0.12
   flutter_inappwebview: ^6.0.0
   permission_handler: ^11.3.0
   flutter_svg: ^2.0.10+1
   card_swiper: ^3.0.1
   universal_html: ^2.0.8
-  file_picker: ^6.0.0
+  file_picker: ^8.1.6
   video_player: ^2.8.6
   chewie: ^1.8.1
   fluttertoast: ^8.2.5
@@ -68,7 +70,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^3.0.1
+  flutter_lints: ^5.0.0
 
 flutter:
   uses-material-design: true
